@@ -78,9 +78,9 @@ Game definitions
 .RE
 
 .SH SIGNALS
-.B USR1
+.B SIGINT
 .RS
-Shutdown the metaserver gracefully (can be used to check for memory leaks)
+Shutdown the metaserver gracefully (can also be used to check for memory leaks)
 .RE
 
 .SH AUTHOR
